Fix top alignment of slot picker boxes

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -69,8 +69,3 @@
   @include media(false, 768px)
     float: none
     max-width: none
-
-  @include media(desktop)
-    div:first-child h2,
-    > h2:first-child
-      margin-top: 0
