--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -17,7 +17,7 @@ p
 .step_prompt
   @include core-27
   color: $white
-  margin-bottom: 0
+  margin: 0
   padding: 10px 0 6px 10px
   font-weight: normal
   text-align: left
