--- a/app/assets/stylesheets/modules/moj.slot-picker.css.sass
+++ b/app/assets/stylesheets/modules/moj.slot-picker.css.sass
@@ -143,6 +143,9 @@ table.BookingCalendar
     right: 0
 
 
+.slots
+  margin-bottom: 10px
+
 .day-slots
   display: none
   padding: .5em
